--- a/src/styles.scss
+++ b/src/styles.scss
@@ -124,6 +124,24 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 				fill: var(--md-accent-color);
 			}
 		}
+		.btnc, .type, .word, .subscribe, .fmdelete {
+			top: 50% !important;
+			width: 36px;
+			height: 36px;
+			max-height: unset;
+			border-radius: 100px;
+			transition: all 0.25s ease;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			&:hover {
+				background-color: rgba(var(--md-accent-color-rgb), 0.1);
+			}
+			svg {
+				width: 24px;
+				height: 24px;
+			}
+		}
 		.btnp { // play and pause button
 			background-color: var(--md-accent-color);
 			transition: transform 0.25s ease;
@@ -188,6 +206,19 @@ body:not(.ignore-now-playing), body.ignore-now-playing:not(.mq-playing) {
 		.list svg{
 			-webkit-mask-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Cpath d='M13 15q-1.042 0-1.771-.729-.729-.729-.729-1.771 0-1.042.729-1.771Q11.958 10 13 10q.271 0 .521.052t.479.156V4h4v1.5h-2.5v7q0 1.042-.729 1.771Q14.042 15 13 15ZM3 11.5V10h6v1.5Zm0-3V7h9v1.5Zm0-3V4h9v1.5Z'/%3E%3C/svg%3E");
 			-webkit-mask-position-y: 65%;
+		}
+	}
+	// Player: tooltips
+	.u-result.u-result-play .inner {
+		background: var(--md-accent-color-bg-darken);
+		border-radius: 10px;
+		transform: translateY(-10px);
+		box-shadow: none;
+		height: 36px;
+		span {
+			color: var(--md-accent-color);
+			font-size: 15px;
+			line-height: 36px;
 		}
 	}
 	// Player: song cover and info
